Use KTp::Contact to determine contact's capabilities in krunner actions

KRunner now shows "Start audio call" and "Start video call"
actions when contact has such capabilities.

REVIEW: 109698
BUG: 317118
FIXED-IN: 0.6.0